--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
   },
   "sideEffects": false,
   "scripts": {
+    "typecheck": "tsc --noEmit",
     "prepack": "yarn build",
     "build": "rollup -c rollup.config.mjs && ./.scripts/postbuild.sh",
     "test": "vitest --coverage --typecheck",
