--- a/package.json
+++ b/package.json
@@ -33,7 +33,16 @@
     "dist",
     "compat",
     "*.d.ts",
-    "*.js"
+    "array.js",
+    "compat.js",
+    "error.js",
+    "function.js",
+    "math.js",
+    "object.js",
+    "predicate.js",
+    "promise.js",
+    "string.js",
+    "util.js"
   ],
   "publishConfig": {
     "access": "public",
