--- a/package.json
+++ b/package.json
@@ -82,6 +82,10 @@
         }
       },
       "./compat/*": {
+        "import": {
+          "types": "./compat/*.d.mts",
+          "default": "./compat/*.mjs"
+        },
         "require": {
           "types": "./compat/*.d.ts",
           "default": "./compat/*.js"
