--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "es-toolkit",
   "description": "A state-of-the-art, high-performance JavaScript utility library with a small bundle size and strong type annotations.",
   "version": "1.39.3",
-  "homepage": "https://es-toolkit.slash.page",
+  "homepage": "https://es-toolkit.dev",
   "bugs": "https://github.com/toss/es-toolkit/issues",
   "repository": {
     "type": "git",
