--- a/package.json
+++ b/package.json
@@ -172,12 +172,17 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.15.3",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-typescript": "^7.27.1",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@eslint/js": "^9.9.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/babel__core": "^7",
+    "@types/babel__preset-env": "^7",
     "@types/broken-link-checker": "^0",
     "@types/eslint": "^9",
     "@types/jscodeshift": "^0.12.0",
