--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -13,16 +13,17 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '6'
+      - name: Install Yarn
+        run: |
+          npm install -g yarn
       - name: Check node, npm version
         run: |
           node -v
           npm -v
-      - name: Install Yarn
-        run: |
-          npm install -g yarn
+          yarn -v
       - name: Setup package.json
         run: |
-          rm -f package.json yarn.lock
+          rm -f package.json yarn.lock .yarnrc.yml
           cat > package.json << 'EOF'
           {
             "name": "es-toolkit-node-6",
