--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '6'
+          node-version: '8'
       - name: Install Yarn
         run: |
           npm install -g yarn
@@ -45,5 +45,6 @@ jobs:
         run: |
           rm -rf node_modules
           yarn install --verbose
+          yarn why stack-utils
       - name: Run tests
         run: npx jest
